--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
     </div>
 
     <input type="text" placeholder="what do you want to play?" class="input1">
+    <ul>
+        <li>Premium</li>
+        <li> Support</li>
+        <li>Download</li>
+    </ul>
 </div>
     </header>
 
     <main>
 
+        <div class="conatiner">
+            <div class="item box1">box1</div>
+            <div class="item box2">box2</div>
+            <div class="item box3">box3</div>
+            <div class="item box4">box4</div>
+            <div class="item box5">box5</div>
+            <!-- <div class="item">box6</div>
+            <div class="item">box7</div>
+            <div class="item">box8</div>
+            <div class="item">box9</div> -->
+        </div>
     </main>
 
     <footer>
