--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
     <main>
 
         <div class="conatiner">
-            <div class="item box1">box1</div>
+            <div class="item box1">
+                <div class="nn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" class="e-9640-icon" viewBox="0 0 24 24"><path d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path></svg>
+                    <h5 class="nnh">Your Library</h5>
+                    <div class="hh">
+                        <h4>Create your own playlist</h4>
+                        <p>it's easy, we'll help you</p>
+                        <button>create playlist</button>
+                    </div>
+                </div>
+            </div>
             <div class="item box2">box2</div>
-            <div class="item box3">box3</div>
+            <!-- <div class="item box3">box3</div>
             <div class="item box4">box4</div>
-            <div class="item box5">box5</div>
+            <div class="item box5">box5</div> -->
             <!-- <div class="item">box6</div>
             <div class="item">box7</div>
             <div class="item">box8</div>
