hello cards is added

--- a/index.html
+++ b/index.html
@@ -29,14 +29,39 @@
                 <div class="nn">
                     <svg data-encore-id="icon" role="img" aria-hidden="true" class="e-9640-icon" viewBox="0 0 24 24"><path d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path></svg>
                     <h5 class="nnh">Your Library</h5>
-                    <div class="hh">
-                        <h4>Create your own playlist</h4>
-                        <p>it's easy, we'll help you</p>
-                        <button>create playlist</button>
-                    </div>
+                    
+                </div>
+                <div class="hh">
+                    <h4>Create your own playlist</h4>
+                    <p>it's easy, we'll help you</p>
+                    <button>create playlist</button>
+                </div>
+
+                <div class="hh">
+                    <h4>Lets find some podcast to follow</h4>
+                    <p>We'll keep you updated on new episodes</p>
+                    <button>Browse Podcast</button>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li>Legal</li>
+                        <li>Safety & privacy Center</li>
+                        <li> privacy Policy</li>
+                        <li>Cookies</li>
+                        <li>About Ads</li>
+                        <li>Accessiblity</li>
+                        <span style="font-weight: 600;font-size: smaller;"><li>Cookies</li></span>
+                    </ul>
                 </div>
             </div>
-            <div class="item box2">box2</div>
+            <div class="item box2">
+                <h3 class="tt">Trending Songs</h3>
+                <div class="card">
+                    <img src="./images/1.avif" alt="image1" class="songi">
+                    <h5 class="songsh">run it up</h5>
+                    <p class="singers">hanumankind</p>
+                </div>
+            </div>
             <!-- <div class="item box3">box3</div>
             <div class="item box4">box4</div>
             <div class="item box5">box5</div> -->
