--- a/index.html
+++ b/index.html
@@ -56,10 +56,48 @@
             </div>
             <div class="item box2">
                 <h3 class="tt">Trending Songs</h3>
-                <div class="card">
-                    <img src="./images/1.avif" alt="image1" class="songi">
-                    <h5 class="songsh">run it up</h5>
-                    <p class="singers">hanumankind</p>
+                <div class="cardscontainer">
+                    <div class="card">
+                        <img src="./images/1.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="./images/2.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
+
+
+                    <div class="card">
+                        <img src="./images/1.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
+
+
+
+
+                    <div class="card">
+                        <img src="./images/2.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
+
+
+                    <div class="card">
+                        <img src="./images/1.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
+
+
+                    <div class="card">
+                        <img src="./images/2.avif" alt="image1" class="songi">
+                        <h5 class="songsh">run it up</h5>
+                        <p class="singers">hanumankind</p>
+                    </div>
                 </div>
             </div>
             <!-- <div class="item box3">box3</div>
